--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 {%for image in images%}
                     <div class="col-md-4">
                       <div class="card mb-4 shadow">
-                        <img class="card-img-top" src="{{ url_for('static', filename='images/') }}{{ image.link }}">
+                        <img class="card-img-top" style="image-orientation: from-image;" src="{{ url_for('static', filename='images/') }}{{ image.link }}">
                           <ul class="list-group list-group-flush">
                               <li class="list-group-item">{{ image.name }} :שם המוצר</li>
                               <li class="list-group-item">{{ image.size }} :מידה</li>
