--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 {%for image in images%}
                     <div class="col-md-4">
                       <div class="card mb-4 shadow">
-                        <img class="card-img-top" style="image-orientation: from-image;" src="{{ url_for('static', filename='images/') }}{{ image.link }}">
+                        <img class="card-img-top" src="{{ url_for('static', filename='images/') }}{{ image.link }}">
                           <ul class="list-group list-group-flush">
                               <li class="list-group-item">{{ image.name }} :שם המוצר</li>
                               <li class="list-group-item">{{ image.size }} :מידה</li>
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-
+{% if logged %}
 <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -123,6 +123,8 @@
   </div>
 </div>
 
+{% else %}
+
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -146,6 +148,8 @@
   </div>
 </div>
 
+{% endif %}
+
 {% with messages = get_flashed_messages() %}
     {% if messages %}
         {%for message in messages%}
@@ -162,5 +166,3 @@
 
 </body>
 </html>
-
-
